[metadata]
# replace with your username:
name = pydrrun
version = 0.0.1
author = Patrick Lavin
author_email = plavin997@gmail.com
description = A package for installing DynamoRIO and a thin interface to drrun.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/plavin/pydrrun
project_urls =
    Bug Tracker = https://github.com/plavin/pydrrun/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =
    pytest
scripts =
    bin/pydrrun

[options.packages.find]
where =
